# cocotola-1.23

./: .bazelrc  .gitignore  .gitleaksignore  .mise.toml  .pre-commit-config.yaml  BUILD.bazel  MODULE.bazel  README.md  Taskfile.yml  deps.bzl  go.mod  go.sum  go.work  go.work.sum  result.json  sonar-project.properties
cocotola-admin-backend/: BUILD.bazel  go.mod
cocotola-app/: BUILD.bazel  go.mod  main.go
cocotola-app/config/: BUILD.bazel  config.go  local.yml  production.yml
cocotola-app/web_dist/: BUILD.bazel
cocotola-auth/gateway/: BUILD.bazel  auth_token_manager.go  auth_token_manager_s_test.go  firebase_client.go  google_auth_client.go  google_auth_client_s_test.go  helper_test.go  init.go  repository_factory.go  transaction_manager.go
cocotola-auth/gateway/mocks/: BUILD.bazel  HTTPClient.go
cocotola-auth/initialize/: BUILD.bazel  init.go  initialize.go
cocotola-auth/service/: BUILD.bazel  auth_token_manager.go  repository_factory.go
cocotola-auth/service/mocks/: BUILD.bazel  FirebaseClient.go
cocotola-core/: .mockery.yaml  BUILD.bazel  go.mod  go.sum  main.go
cocotola-core/config/: BUILD.bazel  config.go  local.yml  production.yml
cocotola-core/controller/gin/: BUILD.bazel  app_router.go  helper_test.go  init.go  workbook_handler.go  workbook_handler_s_test.go
cocotola-core/domain/: BUILD.bazel
cocotola-core/gateway/: BUILD.bazel  cocotola_auth_client.go  init.go  repository_factory.go  transaction_manager.go  workbook_repository.go
cocotola-core/initialize/: BUILD.bazel  init.go  initialize.go
cocotola-core/service/: BUILD.bazel  cocotola_auth_client.go  repository_factory.go  service_s_test.go  transaction_manager.go  workbook_repository.go
cocotola-core/service/mocks/: BUILD.bazel  CocotolaAuthClient.go
cocotola-core/sqls/: BUILD.bazel
cocotola-core/usecase/student/: BUILD.bazel  init.go  workbook_command_usecase.go  workbook_query_usecase.go
cocotola-import/: .gitignore  BUILD.bazel  fileName.json  go.mod  go.sum  main.go
cocotola-import/config/: BUILD.bazel  config.go  local.yml  production.yml
cocotola-import/data/: BUILD.bazel  data.go  english-word-problem-001.csv
cocotola-import/domain/: BUILD.bazel  word_sentence_pair.go
cocotola-import/firestore/: BUILD.bazel  firestore.go  firestore_test.go
cocotola-import/firestore/word/: BUILD.bazel  all_exporter.go
cocotola-import/gateway/: BUILD.bazel  export_history.go  word_sentence_pair.go
cocotola-import/service/: BUILD.bazel  export_history.go  word_sentence_pair.go
cocotola-import/sqls/: BUILD.bazel  sqls.go
cocotola-import/sqls/sqlite3/: 2021020101_create_export_history.up.sql  2021020102_create_word_sentence_pair.up.sql
cocotola-import/tatoeba/: BUILD.bazel  tatoeba_eng.go  tatoeba_links.go  tatoeba_sentences.go
cocotola-import/usecase/import_firestore/: BUILD.bazel  export_firestore_to_local_files.go  import_local_files_to_firestore.go  import_to_local_db.go
cocotola-synthesizer/: .mockery.yaml  BUILD.bazel  go.mod  go.sum  main.go  main.txt
cocotola-synthesizer/config/: BUILD.bazel  config.go  local.yml  production.yml
cocotola-synthesizer/controller/gin/: BUILD.bazel  app_router.go  helper_test.go  init.go  synthesizer_handler.go  synthesizer_handler_s_test.go
cocotola-synthesizer/domain/: BUILD.bazel  audio.go  audio_test.go
cocotola-synthesizer/gateway/: BUILD.bazel  audio_file.go  audio_repository.go  google_tts_client.go  google_tts_client_test.go  init.go  repository_factory.go  transaction_manager.go
cocotola-synthesizer/initialize/: BUILD.bazel  init.go  initialize.go
cocotola-synthesizer/service/: BUILD.bazel  audio_file.go  audio_repository.go  repository_factory.go  synthesizer_client.go
cocotola-synthesizer/sqls/: BUILD.bazel
cocotola-synthesizer/sqls/mysql/: 2021020101_create_audio.up.sql
cocotola-synthesizer/sqls/postgres/: 2021020101_create_audio.up.sql
cocotola-synthesizer/sqls/sqlite3/: 2021020101_create_audio.up.sql
cocotola-synthesizer/usecase/: BUILD.bazel  init.go  synthesizer_usecase.go
cocotola-tatoeba/: .mockery.yaml  BUILD.bazel  README.md  go.mod  go.sum  main.go
cocotola-tatoeba/config/: BUILD.bazel  config.go  local.yml  production.yml
cocotola-tatoeba/controller/gin/: BUILD.bazel  admin_handler.go  app_router.go  init.go  user_handler.go
cocotola-tatoeba/domain/: BUILD.bazel  english.go  import.go
cocotola-tatoeba/gateway/: BUILD.bazel  init.go  repository_factory.go  tatoeba_link_iterator.go  tatoeba_link_repository.go  tatoeba_sentence_iterator.go  tatoeba_sentence_repository.go  tatoeba_sentence_repository_test.go  transaction_manager.go
cocotola-tatoeba/initialize/: BUILD.bazel  initialize.go
cocotola-tatoeba/service/: BUILD.bazel  init.go  repository_factory.go  tatoeba_itrerator.go  tatoeba_link_repository.go  tatoeba_sentence_repository.go  transaction.go  transaction_manager.go
cocotola-tatoeba/service/mocks/: BUILD.bazel  TatoebaLinkAddParameter.go  TatoebaLinkAddParameterIterator.go  TatoebaLinkRepository.go  TatoebaSentence.go  TatoebaSentenceAddParameter.go  TatoebaSentenceAddParameterIterator.go  TatoebaSentencePair.go  TatoebaSentencePairSearchResult.go  TatoebaSentenceRepository.go  TatoebaSentenceSearchCondition.go
cocotola-tatoeba/sqls/: BUILD.bazel
cocotola-tatoeba/sqls/mysql/: 2020080112_create_tatoeba_link.up.sql
cocotola-tatoeba/sqls/sqlite3/: 2020080112_create_tatoeba_link.up.sql
cocotola-tatoeba/usecase/: BUILD.bazel  admin_usecase.go  init.go  user_usecase.go
generics/: BUILD.bazel  go.mod  main.go
hello-world/: BUILD.bazel  go.mod
redstart/: BUILD.bazel  go.mod  go.sum
redstart/lib/config/: BUILD.bazel  config_db.go  config_db_mysql.go  config_db_postgres.go  config_db_sqlite3.go  config_log.go  config_tracer.go  config_tracer_gcp.go.txt  config_tracer_none.go.txt  config_tracer_otel.go.txt  config_tracer_stdout.go.txt  init.go
redstart/lib/domain/: BUILD.bazel  base_model.go
redstart/lib/errors/: BUILD.bazel
redstart/lib/gateway/: BUILD.bazel  db.go  db_dialect.go  db_mysql.go  db_postgres.go  db_sqlite.go  init.go  (+3 more)
redstart/sqls/: BUILD.bazel
(+295 files in other folders)
