# rules_go
bazel_dep(name = "rules_go", version = "0.50.1", repo_name = "rules_go")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.3")

# gazelle
bazel_dep(name = "gazelle", version = "0.39.1", repo_name = "gazelle")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//:go.work")

use_repo(
    go_deps,
    "com_github_casbin_casbin_v2",
    "com_github_casbin_gorm_adapter_v3",
    "com_github_gin_contrib_cors",
    "com_github_gin_gonic_gin",
    "com_github_go_playground_validator_v10",
    "com_github_go_sql_driver_mysql",
    "com_github_golang_migrate_migrate_v4",
    "com_github_google_uuid",
    "com_github_googlecloudplatform_opentelemetry_operations_go_exporter_trace",
    "com_github_kujilabo_cocotola_1_23_redstart",
    "com_github_kujilabo_redstart",
    "com_github_mattn_go_sqlite3",
    "com_github_orandin_slog_gorm",
    "com_github_pkg_errors",
    "com_github_prometheus_client_golang",
    "com_github_stretchr_testify",
    "io_gorm_driver_mysql",
    "io_gorm_driver_postgres",
    "io_gorm_driver_sqlite",
    "io_gorm_gorm",
    "in_gopkg_yaml_v2",
    "com_github_tcolgate_mp3",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracehttp",
    "io_opentelemetry_go_otel_exporters_stdout_stdouttrace",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_trace",
    "io_opentelemetry_go_otel",
    "org_golang_x_crypto",
    "org_golang_x_xerrors",
)
