load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cocotola-app_lib",
    srcs = ["main.go"],
    importpath = "github.com/kujilabo/cocotola-1.23/cocotola-app",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "cocotola-app",
    embed = [":cocotola-app_lib"],
    visibility = ["//visibility:public"],
)
