load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cocotola-app_lib",
    srcs = ["main.go"],
    embedsrcs = ["web_dist/vite.svg"],
    importpath = "github.com/kujilabo/cocotola-1.23/cocotola-app",
    visibility = ["//visibility:private"],
    deps = [
        "//cocotola-app/config",
        "//cocotola-auth/config",
        "//cocotola-auth/controller/gin",
        "//cocotola-auth/gateway",
        "//cocotola-auth/initialize",
        "//cocotola-auth/service",
        "//cocotola-core/controller/gin",
        "//cocotola-core/gateway",
        "//cocotola-core/initialize",
        "//cocotola-core/service",
        "//lib/controller/gin",
        "//lib/gateway",
        "//redstart/lib/config",
        "//redstart/lib/errors",
        "//redstart/lib/gateway",
        "//redstart/lib/log",
        "//redstart/sqls",
        "@com_github_gin_gonic_gin//:gin",
        "@io_gorm_gorm//:gorm",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//propagation",
    ],
)

go_binary(
    name = "cocotola-app",
    embed = [":cocotola-app_lib"],
    visibility = ["//visibility:public"],
)
