load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cocotola-app_lib",
    srcs = ["main.go"],
    importpath = "github.com/kujilabo/cocotola-1.23/cocotola-app",
    visibility = ["//visibility:private"],
    deps = [
        "//cocotola-app/config",
        "//cocotola-app/web_dist",
        "//cocotola-auth/initialize",
        "//cocotola-core/initialize",
        "//cocotola-synthesizer/initialize",
        "//cocotola-tatoeba/initialize",
        "//lib/controller/gin",
        "//lib/domain",
        "//lib/gateway",
        "//redstart/lib/config",
        "//redstart/lib/errors",
        "//redstart/lib/log",
        "//redstart/sqls",
        "@com_github_gin_gonic_gin//:gin",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//propagation",
    ],
)

go_binary(
    name = "cocotola-app",
    embed = [":cocotola-app_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)
