load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cocotola-import_lib",
    srcs = ["main.go"],
    importpath = "github.com/kujilabo/cocotola-1.23/cocotola-import",
    visibility = ["//visibility:private"],
    deps = ["//cocotola-import/tatoeba"],
)

go_binary(
    name = "cocotola-import",
    embed = [":cocotola-import_lib"],
    visibility = ["//visibility:public"],
)
