load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "cocotola-import_lib",
    srcs = ["main.go"],
    importpath = "github.com/kujilabo/cocotola-1.23/cocotola-import",
    visibility = ["//visibility:private"],
    deps = [
        "//cocotola-import/config",
        "//cocotola-import/tatoeba",
        "//cocotola-import/usecase/import_firestore",
        "//lib/domain",
        "//redstart/lib/errors",
    ],
)

go_binary(
    name = "cocotola-import",
    embed = [":cocotola-import_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "pkg",
    srcs = [":cocotola-import"],
)

oci_image(
    name = "image",
    base = "@distroless_static_debian12_linux_amd64",
    entrypoint = ["/cocotola-import"],
    tars = [":pkg"],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["cocotola-import:latest"],
)

oci_push(
    name = "push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "us-east1-docker.pkg.dev/cocotola-1-23-develop-24-11-02/cocotola-import/cocotola-import",
)
