load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "cocotola-synthesizer_lib",
    srcs = ["main.go"],
    importpath = "github.com/kujilabo/cocotola-1.23/cocotola-synthesizer",
    visibility = ["//visibility:private"],
    deps = [
        "//cocotola-synthesizer/config",
        "//cocotola-synthesizer/controller/gin",
        "//cocotola-synthesizer/gateway",
        "//cocotola-synthesizer/initialize",
        "//cocotola-synthesizer/service",
        "//cocotola-synthesizer/sqls",
        "//lib/gateway",
        "//redstart/lib/config",
        "//redstart/lib/errors",
        "//redstart/lib/gateway",
        "//redstart/lib/log",
        "@com_github_gin_gonic_gin//:gin",
        "@io_gorm_gorm//:gorm",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//propagation",
    ],
)

go_binary(
    name = "cocotola-synthesizer",
    embed = [":cocotola-synthesizer_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "pkg",
    srcs = [":cocotola-synthesizer"],
)

oci_image(
    name = "image",
    base = "@distroless_static_debian12_linux_amd64",
    entrypoint = ["/cocotola-synthesizer"],
    tars = [":pkg"],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["cocotola-synthesizer:latest"],
)

oci_push(
    name = "push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "us-east1-docker.pkg.dev/cocotola-1-23-develop-24-11-02/cocotola-synthesizer/cocotola-synthesizer",
)
