load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "cocotola-synthesizer_lib",
    srcs = ["main.go"],
    importpath = "github.com/kujilabo/cocotola-1.23/cocotola-synthesizer",
    visibility = ["//visibility:private"],
    deps = [
        "//cocotola-synthesizer/config",
        "//cocotola-synthesizer/initialize",
        "//cocotola-synthesizer/sqls",
        "//lib/controller/gin",
        "//lib/domain",
        "//lib/gateway",
        "//redstart/lib/config",
        "//redstart/lib/errors",
        "//redstart/lib/log",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//propagation",
    ],
)

go_binary(
    name = "cocotola-synthesizer",
    embed = [":cocotola-synthesizer_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "pkg",
    srcs = [":cocotola-synthesizer"],
)

oci_image(
    name = "image",
    # base = "@distroless_static_debian12_linux_amd64",
    base = "@distroless_static_debian12_debug",
    entrypoint = ["/cocotola-synthesizer"],
    tars = [":pkg"],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["cocotola-synthesizer:latest"],
)

oci_push(
    name = "push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "us-east1-docker.pkg.dev/cocotola-1-23-develop-24-11-02/cocotola-synthesizer/cocotola-synthesizer",
)
