load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "cocotola-tatoeba_lib",
    srcs = ["main.go"],
    importpath = "github.com/kujilabo/cocotola-1.23/cocotola-tatoeba",
    visibility = ["//visibility:private"],
    deps = [
        "//cocotola-tatoeba/config",
        "//cocotola-tatoeba/controller/gin",
        "//cocotola-tatoeba/gateway",
        "//cocotola-tatoeba/initialize",
        "//cocotola-tatoeba/service",
        "//cocotola-tatoeba/sqls",
        "//lib/gateway",
        "//redstart/lib/config",
        "//redstart/lib/errors",
        "//redstart/lib/gateway",
        "//redstart/lib/log",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_kujilabo_cocotola_1_23_redstart_mysql//lib/gateway",
        "@io_gorm_gorm//:gorm",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//propagation",
    ],
)

go_binary(
    name = "cocotola-tatoeba",
    embed = [":cocotola-tatoeba_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "pkg",
    srcs = [":cocotola-tatoeba"],
)

oci_image(
    name = "image",
    base = "@distroless_static_debian12_linux_amd64",
    entrypoint = ["/cocotola-tatoeba"],
    tars = [":pkg"],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["cocotola-tatoeba:latest"],
)

oci_push(
    name = "push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "us-east1-docker.pkg.dev/cocotola-1-23-develop-24-11-02/cocotola-tatoeba/cocotola-tatoeba",
)
