load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_load")


go_library(
    name = "hello-world_lib",
    srcs = ["main.go"],
    importpath = "github.com/kujilabo/cocotola-1.23/hello-world",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "hello-world",
    embed = [":hello-world_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "pkg",
    srcs = [":hello-world"],
)

oci_image(
    name = "image",
    base = "@distroless_static_debian12_linux_amd64",
    entrypoint = ["/hello-world"],
    tars = [":pkg"],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["hello-world:latest"],
)

oci_push(
    name = "push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "asia-northeast1-docker.pkg.dev/cocotola-001/hello-world/hello-world",
)
