load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "redstart_lib",
    srcs = ["main.go"],
    importpath = "github.com/kujilabo/cocotola-1.23/redstart",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "redstart",
    embed = [":redstart_lib"],
    visibility = ["//visibility:public"],
)
