load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "initialize",
    srcs = ["initialize.go"],
    importpath = "github.com/kujilabo/cocotola-1.23/cocotola-auth/initialize",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-auth/config",
        "//cocotola-auth/controller/gin",
        "//cocotola-auth/gateway",
        "//cocotola-auth/service",
        "//cocotola-auth/usecase",
        "//lib/config",
        "//redstart/lib/config",
        "//redstart/lib/errors",
        "//redstart/lib/log",
        "//redstart/user/service",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_golang_jwt_jwt//:jwt",
        "@io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp//:otelhttp",
    ],
)
