load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "initialize",
    srcs = ["initialize.go"],
    importpath = "github.com/kujilabo/cocotola-1.23/cocotola-auth/initialize",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-auth/service",
        "//lib/config",
        "//lib/controller/gin",
        "//redstart/lib/config",
        "//redstart/lib/errors",
        "//redstart/lib/log",
        "//redstart/user/service",
        "@com_github_gin_gonic_gin//:gin",
    ],
)
