load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "initialize",
    srcs = ["initialize.go"],
    importpath = "github.com/kujilabo/cocotola-1.23/cocotola-auth/initialize",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-auth/config",
        "//cocotola-auth/controller/gin",
        "//cocotola-auth/gateway",
        "//cocotola-auth/service",
        "//lib/controller/gin",
        "//redstart/lib/errors",
        "//redstart/lib/gateway",
        "//redstart/lib/log",
        "//redstart/user/service",
        "@com_github_gin_gonic_gin//:gin",
        "@io_gorm_gorm//:gorm",
    ],
)
