load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = [
        "auth_token_manager.go",
        "firebase_client.go",
        "repository_factory.go",
        "state_repository.go",
    ],
    importpath = "github.com/kujilabo/cocotola-1.23/cocotola-auth/service",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-auth/domain",
        "//redstart/lib/service",
        "//redstart/user/domain",
        "//redstart/user/service",
    ],
)
