load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "domain",
    srcs = ["audio.go"],
    importpath = "github.com/kujilabo/cocotola-1.23/cocotola-synthesizer/domain",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/domain",
        "//redstart/lib/domain",
        "//redstart/lib/errors",
    ],
)

# keep
go_test(
    name = "domain_s_test",
    size = "small",
    srcs = ["audio_test.go"],
    gotags = ["small"],
    deps = [
        ":domain",
        "//lib/domain",
        "//redstart/lib/domain",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
