load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gateway",
    srcs = [
        "audio_file.go",
        "audio_repository.go",
        "google_tts_client.go",
        "init.go",
        "repository_factory.go",
        "transaction_manager.go",
    ],
    importpath = "github.com/kujilabo/cocotola-1.23/cocotola-synthesizer/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-synthesizer/domain",
        "//cocotola-synthesizer/service",
        "//lib/domain",
        "//redstart/lib/domain",
        "//redstart/lib/errors",
        "//redstart/lib/gateway",
        "//redstart/lib/log",
        "@com_github_tcolgate_mp3//:mp3",
        "@io_gorm_gorm//:gorm",
        "@io_opentelemetry_go_otel//:otel",
    ],
)

go_test(
    name = "gateway_test",
    srcs = ["google_tts_client_test.go"],
    deps = [
        ":gateway",
        "//lib/domain",
        "@com_github_stretchr_testify//assert",
        "@com_github_tcolgate_mp3//:mp3",
    ],
)
