load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "initialize",
    srcs = ["initialize.go"],
    importpath = "github.com/kujilabo/cocotola-1.23/cocotola-synthesizer/initialize",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-synthesizer/config",
        "//cocotola-synthesizer/controller/gin",
        "//cocotola-synthesizer/gateway",
        "//cocotola-synthesizer/service",
        "//cocotola-synthesizer/usecase",
        "//lib/config",
        "//redstart/lib/config",
        "@com_github_gin_gonic_gin//:gin",
        "@io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp//:otelhttp",
    ],
)
