load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "initialize",
    srcs = ["initialize.go"],
    importpath = "github.com/kujilabo/cocotola-1.23/cocotola-synthesizer/initialize",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/config",
        "//lib/controller/gin",
        "//redstart/lib/config",
        "@com_github_gin_gonic_gin//:gin",
    ],
)
