load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "initialize",
    srcs = ["initialize.go"],
    importpath = "github.com/kujilabo/cocotola-1.23/cocotola-synthesizer/initialize",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-synthesizer/config",
        "//cocotola-synthesizer/controller/gin",
        "//cocotola-synthesizer/gateway",
        "//cocotola-synthesizer/service",
        "//lib/controller/gin",
        "//redstart/lib/gateway",
        "@com_github_gin_gonic_gin//:gin",
        "@io_gorm_gorm//:gorm",
    ],
)
